--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,13 @@
+/* ANIMACION ARRIBA */
+@keyframes appear-u {
+  0% {
+    transform: translateY(-100px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+/* ANIMACION ARRIBA */
 /* VARIABLES */
 /* FIRST FOUR - LEFT TO RIGHT BLUE TO WHITE AND THE NEXT FOUR COLORS LEFT TO RIGHT WHITE TO RED */
 /* VARIABLES */
@@ -36,7 +46,7 @@ body {
 .container {
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 8% 84% 8%;
+  grid-template-rows: 10% 80% 10%;
   grid-template-areas: "header" "main" "footer";
   background-color: white;
   background-image: url(../img/brickbackground.png);
@@ -45,6 +55,8 @@ body {
 /* GRID STRUCTURE */
 /* HEADER */
 .main-header {
+  position: fixed;
+  width: 100%;
   height: 60px;
   display: flex;
   justify-content: space-between;
@@ -57,9 +69,6 @@ body {
 .main-logo {
   color: rgb(43, 43, 45);
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  position: relative;
-  top: 30px;
-  right: 20px;
 }
 
 .main-nav {
@@ -99,7 +108,7 @@ body {
 .link-item::after {
   position: absolute;
   content: "";
-  background-color: rgb(43, 43, 45);
+  background-color: white;
   bottom: -5px;
   left: 0;
   width: 0%;
@@ -154,19 +163,43 @@ body {
 .main-title {
   display: flex;
   justify-content: center;
-  align-items: center;
-  height: 80%;
+  z-index: 100;
 }
-.main-title h1 {
+.main-title a {
   padding: 0.2em;
   border-radius: 3px;
-  border: 1px solid black;
   font-size: 24px;
   font-family: "Courier New", Courier, monospace;
   cursor: pointer;
   color: white;
   background-color: rgb(43, 43, 45);
   font-weight: 500;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+#link-item1 {
+  animation-name: appear-u;
+  animation-duration: 0.5s;
+}
+
+#link-item2 {
+  animation-name: appear-u;
+  animation-duration: 1s;
+}
+
+#link-item3 {
+  animation-name: appear-u;
+  animation-duration: 1.5s;
+}
+
+#link-item4 {
+  animation-name: appear-u;
+  animation-duration: 2s;
 }
 
 /* FOOTER */
