fix styles problem

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -167,7 +167,7 @@ body {
 display: flex;
 justify-content: center;
 z-index:100;
-  a{
+  .header-logo{
 padding:0.2em;
 border-radius: 3px;
 font-size: 24px;
