--- a/css/style.css
+++ b/css/style.css
@@ -165,7 +165,7 @@ body {
   justify-content: center;
   z-index: 100;
 }
-.main-title a {
+.main-title .header-logo {
   padding: 0.2em;
   border-radius: 3px;
   font-size: 24px;
