--- a/scss/style.scss
+++ b/scss/style.scss
@@ -95,7 +95,7 @@ body {
     width: 100%;
     height: 100%;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-evenly;
   }
   
   .link-item {
